<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    tools:context=".activities.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:background="@color/PrimaryColor"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_semibold"
                android:includeFontPadding="false"
                android:text="@string/WelcomeString"
                android:textColor="@color/TextIconColor"
                android:textSize="22sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:fontFamily="@font/oswald_semibold"
                android:includeFontPadding="false"
                android:text="@string/video_call_conference_app"
                android:textColor="@color/TextIconColor"
                android:textSize="22sp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/oswald_regular"
            android:includeFontPadding="false"
            android:text="@string/sign_in_your_account"
            android:textColor="@color/PrimaryTextColor"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerLayout"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/signInCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:circularflow_defaultRadius="4dp"
            app:layout_constraintTop_toBottomOf="@id/signInText">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/oswald_regular"
                    android:includeFontPadding="false"
                    android:text="@string/email"
                    android:textColor="@color/PrimaryTextColor"
                    android:textSize="18sp"
                    />

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="8sp"
                    android:layout_marginEnd="8sp"
                    android:background="@null"
                    android:fontFamily="@font/oswald_regular"
                    android:hint="@string/hint_gmail_com"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/PrimaryTextColor"
                    android:textColorHint="#757575"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/oswald_regular"
                    android:includeFontPadding="false"
                    android:text="@string/password_str"
                    android:textColor="@color/PrimaryTextColor"
                    android:textSize="18sp"
                    />

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@null"
                    android:fontFamily="@font/oswald_regular"
                    android:hint="@string/password_hint"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:textColor="@color/PrimaryTextColor"
                    android:textColorHint="#757575"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/oswald_semibold"
            android:includeFontPadding="false"
            android:text="@string/sign_in"
            android:textSize="15sp"
            android:textColor="@color/TextIconColor"
            app:layout_constraintTop_toBottomOf="@+id/signInCard"
            />
        
        <ProgressBar
            android:id="@+id/signInProgressBar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/signInButton"
            app:layout_constraintEnd_toEndOf="@+id/signInButton"
            app:layout_constraintStart_toStartOf="@+id/signInButton"
            app:layout_constraintTop_toTopOf="@+id/signInButton"
            />
        
        <TextView
            android:id="@+id/noAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/oswald_regular"
            android:includeFontPadding="false"
            android:text="@string/dont_have_account"
            android:textColor="@color/PrimaryTextColor"
            android:textSize="18sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/signInButton"
            />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/oswald_semibold"
            android:includeFontPadding="false"
            android:text="@string/sign_up_Text"
            android:textColor="@color/AccentColor"
            android:textSize="18sp"
            android:gravity="center"
            android:textAllCaps="true"
            android:padding="6sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noAccount"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>